--- a/wordpress-nginx/docker-compose.yml
+++ b/wordpress-nginx/docker-compose.yml
@@ -2,34 +2,56 @@ version: "3"
 services:
   db:
     image: mysql:5.7
-    restart: always
+    restart: unless-stopped
     environment:
-      MYSQL_ROOT_PASSWORD: s3cr3t
-      MYSQL_DATABASE: wordpress
-      MYSQL_USER: wordpress
-      MYSQL_PASSWORD: w0rdpr3ss
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
 
   wordpress:
+    depends_on:
+      - db
     image: wordpress:php7.2-fpm-alpine
     restart: unless-stopped
     environment:
       WORDPRESS_DB_HOST: db
-      WORDPRESS_DB_USER: wordpress
-      WORDPRESS_DB_PASSWORD: w0rdpr3ss
-      WORDPRESS_DB_NAME: wordpress
+      WORDPRESS_DB_USER: ${MYSQL_USER}
+      WORDPRESS_DB_PASSWORD: ${MYSQL_PASSWORD}
+      WORDPRESS_DB_NAME: ${MYSQL_DATABASE}
     volumes:
       - wordpress:/var/www/html
 
   web:
+    depends_on:
+      - wordpress
     image: nginx:1.19-alpine
     restart: unless-stopped
     ports:
-      - 80:80
-      - 443:443
+      - ${WEB_HTTP_PORT}:80
+      - ${WEB_HTTPS_PORT}:443
     volumes:
       - wordpress:/var/www/html
       - ./nginx:/etc/nginx/conf.d
+      - certbot:/etc/letsencrypt
+
+  certbot:
+    depends_on:
+      - web
+    image: certbot/certbot
+    volumes:
+      - certbot:/etc/letsencrypt
+      - wordpress:/var/www/html
+    command: >
+      certonly --webroot --webroot-path=/var/www/html
+        --email ${CERTBOT_EMAIL}
+        --agree-tos
+        --no-eff-email
+        --staging
+        -d ${WEB_DOMAIN}
+        -d "www.${WEB_DOMAIN}"
 
 volumes:
-  wordpress:
+  certbot:
   db:
+  wordpress:
