--- a/wordpress-nginx/docker-compose.yml
+++ b/wordpress-nginx/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       MYSQL_DATABASE: ${MYSQL_DATABASE}
       MYSQL_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+    volumes:
+      - db:/var/lib/mysql
 
   wordpress:
     depends_on:
